[2-login-screen] 1. Add login screen  2. Started using a Launcher Theme for Splash Screen  3. Deleted unused activity for splash screen  4. Deleted unused MainActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.olmi.android.memes.ui.splash.SplashActivity">
+        <activity android:name=".ui.login.LoginActivity" android:theme="@style/AppTheme.Launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.olmi.android.memes.MainActivity"></activity>
     </application>
 
 </manifest>
