--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,12 +37,14 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.github.HITGIF:TextFieldBoxes:1.4.5'
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     implementation "com.google.android.material:material:1.2.0-alpha06"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-livedata:2.2.0"
 
     /*Retrofit*/
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
+    implementation 'com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0'
 
     /*OkHttp*/
     implementation 'com.squareup.okhttp3:okhttp:4.5.0'
@@ -52,7 +54,9 @@ dependencies {
     implementation 'io.reactivex.rxjava3:rxjava:3.0.2'
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
 
-    implementation 'com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0'
+    /*Glide*/
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
