--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,22 +14,18 @@
         <activity
             android:name=".ui.login.LoginActivity"
             android:theme="@style/AppTheme">
-
-            <!--
-            intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter
-            -->
+            </intent-filter>
         </activity>
         <activity
             android:name=".ui.main.MainScreenActivity"
             android:theme="@style/AppTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.memes.detail.MemDetailActivity"
+            android:theme="@style/AppTheme">
         </activity>
     </application>
 
